2002-09-18  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (md_apply_fix3): Just return for BFD_RELOC_8.

2002-09-18  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (s_change_section): Fix parsing. Code cleanup.

2002-09-17  Stan Cox  <scox@redhat.com>

	* tc-mips.c (load_address): Use BFD_RELOC_MIPS_GOT_DISP for newabi.
	(macro): Likewise for la.  Likewise for ld.
	(mips_after_parse_args): Make -xgot optional, not the default.
	(md_apply_fix3): Allow composite relocation to set up gp.
	(tc_gen_reloc): Allow relaxing for newabi.
	Relax R_MIPS_CALL16 to R_MIPS_GOT_PAGE/R_MIPS_GOT_OFST if local.
	Relax R_MIPS_GOT16/R_MIPS_LO16 to R_MIPS_GOT_DISP if local.

2002-09-17  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (md_apply_fix3): Note that an implemented
	BFD_RELOC_ARM_IMMEDIATE has been done.
        (tc_gen_reloc): Do not issue reloc number of unimplemented
	BFD_RELOC_ARM_IMMEDIATE and BFD_RELOC_ARM_OFFSET_IMM relocs -
	their name is already in the error message - plus remove them
	from the default case.

	* config/tc-arm.c (do_ldmstm): Warn about unpredictable
	behavior of instructions.

2002-09-17  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* config/tc-tic4x.c: Add function declarations and ATTRIBUTE_UNUSED.
	Convert functions to K&R format.

2002-09-17  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (pdr_seg): Define only for ELF.
	(s_change_section): Remove unused variable. Don't use for nonELF.

2002-09-17  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/obj-elf.c (obj_elf_change_section): Move prototype to
	obj-elf.h
	* config/obj-elf.h (obj_elf_change_section): Likewise.

2002-09-16  Elias Athanasopoulos  <eathan@otenet.gr>

	* dwarf2dbg.c (out_debug_abbrev): Add support for the DW_AT_name field.
	(out_debug_info): Likewise.

2002-09-16  Bruno Haible  <bruno@clisp.org>

	* config/tc-i386.h (ELF_TARGET_FORMAT): New macro.
	(TARGET_FORMAT): Use ELF_TARGET_FORMAT instead of "elf32-i386".