@@ -193,6 +193,7 @@ if { [istarget mips*-*-*] } then {
 
   	run_dump_test "mips-abi32"
   	run_dump_test "mips-abi32-pic"
+  	run_dump_test "mips-abi32-pic2"
 
 	run_dump_test "elf${el}-rel"
 	if {[istarget mips64*-*-*] || [istarget mipsisa32*-*-*]
