@@ -1,4 +1,10 @@
-2002-09-12  Chris Demetriou  <cgd@broadcom.com>
+2002-09-18  Chris Demetriou  <cgd@broadcom.com>
+
+	* gas/mips/mips-abi32-pic2.s: New file.
+	* gas/mips/mips-abi32-pic2.d: New file.
+	* gas/mips/mips.exp: Run new test.
+
+2002-09-18  Chris Demetriou  <cgd@broadcom.com>
 
 	* gas/mips/baddata1.s: New file.
 	* gas/mips/baddata1.l: New file.
