@@ -1,5 +1,15 @@
 2002-09-18  Chris Demetriou  <cgd@broadcom.com>
 
+	* config/tc-mips.c (IS_SEXT_32BIT_NUM): Move closer to top of file.
+	(IS_SEXT_16BIT_NUM): New macro.
+	(macro_build_ldst_constoffset): New function, to build a set of
+	instructions to do a load or store from a constant offset relative
+	to a given register.
+	(macro, s_cprestore): Use macro_build_ldst_constoffset to implement
+	.cprestore pseudo-op.
+
+2002-09-18  Chris Demetriou  <cgd@broadcom.com>
+
 	* config/tc-mips.c (md_apply_fix3): Just return for BFD_RELOC_8.
 
 2002-09-18  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
